delete from favourite list
